--- a/templates/airflow-flower.service.erb
+++ b/templates/airflow-flower.service.erb
@@ -4,9 +4,9 @@ Wants=basic.target
 After=basic.target network.target
 
 [Service]
-Environment="AIRFLOW_HOME=<%= @home_folder %>"
-User=<%= @user %>
-Group=<%= @group %>
+Environment="AIRFLOW_HOME=<%= scope.lookupvar('airflow::home_folder')%>"
+User=<%= scope.lookupvar('airflow::user')%>
+Group=<%= scope.lookupvar('airflow::group')%>
 Type=simple
 ExecStart=/bin/airflow flower
 KillMode=process
