--- a/templates/airflow-webserver.service.erb
+++ b/templates/airflow-webserver.service.erb
@@ -4,20 +4,15 @@ Wants=basic.target
 After=basic.target network.target
 
 [Service]
-PIDFile = <%= @run_folder %>/airflow_webserver.pid
-ExecStart=/usr/bin/gunicorn -w <%= @gunicorn_workers %> -t 120 -b <%= @web_server_host %>:<%= @web_server_port %> airflow.www.app:cached_app()
+PIDFile = <%= scope.lookupvar('airflow::run_folder') %>/airflow_webserver.pid
+ExecStart=/usr/bin/airflow webserver
 ExecReload=/bin/kill -HUP $MAINPID
-Environment="AIRFLOW_HOME=<%= @home_folder %>"
+Environment="AIRFLOW_HOME=<%= scope.lookupvar('airflow::home_folder')%>"
 KillMode=process
 Restart=on-failure
 RestartSec=15s
-User=<%= @user %>
-Group=<%= @group %>
+User=<%= scope.lookupvar('airflow::user')%>
+Group=<%= scope.lookupvar('airflow::group')%>
 
 [Install]
 WantedBy=multi-user.target
-
-
-
-
-
