[issue_6] - scope['variable'] added (https://puppet.com/docs/puppet/5.3/lang_template_erb.html#scopevariable-or-scopelookupvarvariable) - new variable 'celery_ssl_active = false' for proper celary startup - puppet-lint fixes - contain in the init.pp for proper ordering

--- a/templates/airflow-flower.service.erb
+++ b/templates/airflow-flower.service.erb
@@ -4,9 +4,9 @@ Wants=basic.target
 After=basic.target network.target
 
 [Service]
-Environment="AIRFLOW_HOME=<%= @home_folder %>"
-User=<%= @user %>
-Group=<%= @group %>
+Environment="AIRFLOW_HOME=<%= scope['airflow::home_folder'] %>"
+User=<%= scope['airflow::user'] %>
+Group=<%= scope['airflow::group'] %>
 Type=simple
 ExecStart=/bin/airflow flower
 KillMode=process
