--- a/templates/airflow-scheduler.service.erb
+++ b/templates/airflow-scheduler.service.erb
@@ -4,15 +4,15 @@ Wants=basic.target
 After=basic.target network.target
 
 [Service]
-PIDFile = <%= @run_folder %>/airflow_scheduler.pid
+PIDFile = <%= scope['airflow::run_folder'] %>/airflow_scheduler.pid
 ExecStart=/usr/bin/airflow scheduler
 ExecReload=/bin/kill -HUP $MAINPID
-Environment="AIRFLOW_HOME=<%= @home_folder %>"
+Environment="AIRFLOW_HOME=<%= scope['airflow::home_folder'] %>"
 KillMode=process
 Restart=on-failure
 RestartSec=15s
-User=<%= @user %>
-Group=<%= @group %>
+User=<%= scope['airflow::user'] %>
+Group=<%= scope['airflow::group'] %>
 
 [Install]
 WantedBy=multi-user.target
