--- a/templates/airflow.cfg.erb
+++ b/templates/airflow.cfg.erb
@@ -112,6 +112,18 @@ smtp_mail_from = <%= @smtp_mail_from %>
 # This section only applies if you are using the CeleryExecutor in
 # [core] section above
 
+# Enable / Disable CeleryExecutor with SSL. 
+# Ensure you properly generate client and server certs and keys.
+#
+# TODO:
+# * configure 'celery_ssl_active' by params
+# * setup an SSL key and certs
+#
+# celery_ssl_cacert = <%= @celery_ssl_cacert %>
+# celery_ssl_cert = <%= @celery_ssl_cert %>
+# celery_ssl_key = <%= @celery_ssl_key %>
+celery_ssl_active = false
+
 # The app name that will be used by celery
 celery_app_name = <%= @celery_app_name %>
 
