--- a/templates/airflow.cfg.erb
+++ b/templates/airflow.cfg.erb
@@ -107,7 +107,7 @@ smtp_mail_from = <%= @smtp_mail_from %>
 # This section only applies if you are using the CeleryExecutor in
 # [core] section above
 
-# Enable / Disable CeleryExecutor with SSL. 
+# Enable / Disable CeleryExecutor with SSL.
 # Ensure you properly generate client and server certs and keys.
 #
 # TODO:
@@ -161,6 +161,13 @@ job_heartbeat_sec = <%= @job_heartbeat_sec %>
 # how often the scheduler should run (in seconds).
 scheduler_heartbeat_sec = <%= @scheduler_heartbeat_sec %>
 
+# Turn off scheduler catchup by setting this to False.
+# Default behavior is unchanged and
+# Command Line Backfills still work, but the scheduler
+# will not do scheduler catchup if this is False,
+# however it can be set on a per DAG basis in the
+# DAG definition (catchup)
+catchup_by_default = <%= @catchup %>
 
 <% if @statsd_settings['statsd_on'] -%>
 # Statsd (https://github.com/etsy/statsd) integration settings
@@ -206,7 +213,7 @@ authenticate = <%= @mesos_settings['authenticate'] %>
 
 <% if @mesos_settings['authenticate'] -%>
 # Mesos credentials, if authentication is enabled
- default_principal = <%= @mesos_settings['default_principal'] %> 
+ default_principal = <%= @mesos_settings['default_principal'] %>
  default_secret =  <%= @mesos_settings['default_secret'] %>
 <% end %>
 <% end %>
