--- a/templates/airflow.cfg.erb
+++ b/templates/airflow.cfg.erb
@@ -89,7 +89,14 @@ auth_backend = <%= @auth_backend %>
 <%= key %> = <%= value -%>
 <% end %>
 <% end -%>
+
+<% if !@google_settings.empty? -%>
+[google]<% @google_settings.each do |key, value| %>
+<%= key %> = <%= value -%>
+<% end %>
 <% end -%>
+<% end -%>
+
 
 # Filter the list of dags by owner name (requires authentication to be enabled)
 filter_by_owner = <%= @filter_by_owner %>
