--- a/templates/airflow-scheduler.service.erb
+++ b/templates/airflow-scheduler.service.erb
@@ -5,9 +5,10 @@ After=basic.target network.target
 
 [Service]
 PIDFile = <%= scope['airflow::run_folder'] %>/airflow_scheduler.pid
-ExecStart=/usr/bin/airflow scheduler
+ExecStart=<%= @cmd_path %>/bin/airflow scheduler
 ExecReload=/bin/kill -HUP $MAINPID
 Environment="AIRFLOW_HOME=<%= scope['airflow::home_folder'] %>"
+Environment="PATH=<%= @cmd_path %>/bin:$PATH"
 KillMode=process
 Restart=on-failure
 RestartSec=15s
