Replace remaining dead pythonhosted links

--- a/templates/airflow.cfg.erb
+++ b/templates/airflow.cfg.erb
@@ -76,7 +76,7 @@ worker_class =  <%= @worker_class %>
 # Expose the configuration file in the web server
 expose_config = <%= @expose_config %>
 
-# Set to true to turn on authentication : http://pythonhosted.org/airflow/installation.html#web-authentication
+# Set to true to turn on authentication : https://airflow.apache.org/security.html#web-authentication
 authenticate = <%= @authenticate %>
 
 <% if @authenticate -%>
