--- a/templates/airflow-scheduler.service.erb
+++ b/templates/airflow-scheduler.service.erb
@@ -5,10 +5,9 @@ After=basic.target network.target
 
 [Service]
 PIDFile = <%= scope['airflow::run_folder'] %>/airflow_scheduler.pid
-ExecStart=<%= @cmd_path %>/bin/airflow scheduler
+ExecStart=/bin/sh -c '. <%= @cmd_path %>/bin/activate; exec airflow scheduler'
 ExecReload=/bin/kill -HUP $MAINPID
 Environment="AIRFLOW_HOME=<%= scope['airflow::home_folder'] %>"
-Environment="PATH=<%= @cmd_path %>/bin:$PATH"
 KillMode=process
 Restart=on-failure
 RestartSec=15s
