--- a/templates/airflow-webserver.service.erb
+++ b/templates/airflow-webserver.service.erb
@@ -5,10 +5,9 @@ After=basic.target network.target
 
 [Service]
 PIDFile = <%= scope['airflow::run_folder'] %>/airflow_webserver.pid
-ExecStart=<%= @cmd_path %>/bin/airflow webserver
+ExecStart=/bin/sh -c '. <%= @cmd_path %>/bin/activate; exec airflow webserver'
 ExecReload=/bin/kill -HUP $MAINPID
 Environment="AIRFLOW_HOME=<%= scope['airflow::home_folder'] %>"
-Environment="PATH=<%= @cmd_path %>/bin:$PATH"
 KillMode=process
 Restart=on-failure
 RestartSec=15s
