--- a/templates/webserver_config.py.erb
+++ b/templates/webserver_config.py.erb
@@ -25,17 +25,12 @@ from flask_appbuilder.security.manager import AUTH_<%= @auth_backend.upcase %>
 
 AUTH_TYPE = AUTH_<%= @auth_backend.upcase %>
 
-# Uncomment to setup Full admin role name
-# AUTH_ROLE_ADMIN = 'Admin'
-
-# Uncomment to setup Public role name, no authentication needed
-# AUTH_ROLE_PUBLIC = 'Public'
-
+<%- if @auth_user_registration_role -%>
 # Will allow user self registration
-# AUTH_USER_REGISTRATION = True
+AUTH_USER_REGISTRATION = True
 
-# The default user self registration role
-# AUTH_USER_REGISTRATION_ROLE = "Public"
+AUTH_USER_REGISTRATION_ROLE = "<%= @auth_user_registration_role %>"
+<%- end -%>
 
 <% if @auth_backend == 'LDAP' -%>
 <% @auth_details.each do |key, value| %>
