Fix flower proxying

--- a/templates/airflow.cfg.erb
+++ b/templates/airflow.cfg.erb
@@ -150,7 +150,7 @@ flower_host = <%= @web_server_host %>
 # The root URL for Flower
 # Ex: flower_url_prefix = /flower
 # https://airflow.apache.org/howto/run-behind-proxy.html
-flower_url_prefix = <%= @flower_prefix %>
+flower_url_prefix = <%= @flower_url_prefix %>
 
 # This defines the port that Celery Flower runs on
 flower_port = <%= @flower_port %>
