--- a/templates/airflow-worker.service.erb
+++ b/templates/airflow-worker.service.erb
@@ -8,6 +8,9 @@ PIDFile = <%= scope['airflow::run_folder'] %>/airflow_worker.pid
 ExecStart=/bin/sh -c '. <%= @cmd_path %>/bin/activate; exec airflow worker'
 ExecReload=/bin/kill -HUP $MAINPID
 Environment="AIRFLOW_HOME=<%= scope['airflow::home_folder'] %>"
+<% if scope['airflow::worker_log_level'] %>
+Environment="AIRFLOW__CORE__LOGGING_LEVEL=<%= scope['airflow::worker_log_level'] %>"
+<% end %>
 KillMode=process
 Restart=on-failure
 RestartSec=15s
