--- a/templates/airflow.cfg.erb
+++ b/templates/airflow.cfg.erb
@@ -81,6 +81,14 @@ donot_pickle = <%= @donot_pickle %>
 # If using IP address as hostname is preferred, use value ``airflow.utils.net.get_host_ip_address``
 hostname_callable = <%= @hostname_callable %>
 
+# How long before timing out a python file import
+dagbag_import_timeout = <%= @dagbag_import_timeout %>
+
+<% if @newer_version %>
+# How long before timing out a DagFileProcessor, which processes a dag file
+dag_file_processor_timeout = <%= @dag_file_processor_timeout %>
+<% end %>
+
 [webserver]
 # The base url of your website as airflow cannot guess what domain or
 # cname you are using. This is used in automated emails that
