Fix run_duration breaking continuous scheduler run
on-failure makes it so that the scheduler doesn't restart on normal
stops, such as happens with run_duration or num_runs (not implemented)
set. Switch to always in that case.

--- a/templates/airflow-scheduler.service.erb
+++ b/templates/airflow-scheduler.service.erb
@@ -12,7 +12,7 @@ Environment="AIRFLOW_HOME=<%= scope['airflow::home_folder'] %>"
 Environment="AIRFLOW__CORE__LOGGING_LEVEL=<%= scope['airflow::scheduler_log_level'] %>"
 <% end %>
 KillMode=process
-Restart=on-failure
+Restart=<%= scope['airflow::run_duration'] > 0 ? 'always' : 'on-failure' %>
 RestartSec=15s
 User=<%= scope['airflow::user'] %>
 Group=<%= scope['airflow::group'] %>
